--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,28 @@
 
+<!--
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
-  <div class="container">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <div class="d-flex">
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-info px-4" data-bs-toggle="modal" data-bs-target="#loginModal">
-          Iniciar Sesión
-        </button>
-      </div>
+  
+</nav>
+-->
+<div class="container">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="d-flex">
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-info px-4" data-bs-toggle="modal" data-bs-target="#loginModal">
+        Iniciar Sesión
+      </button>
     </div>
   </div>
-</nav>
+</div>
 <!-- Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+<div 
+    class="modal fade"
+    id="loginModal" 
+    tabindex="-1" 
+    aria-labelledby="loginModalLabel" 
+    aria-hidden="true"
+    data-backdrop="false"
+    >
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
