--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -1,18 +1,30 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <app-login></app-login>
+    <h1 class="mb-0">
+        {{user.firstName}}
+        <span class="text-light w">{{user.lastName}}</span>
+    </h1>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">{{myPortfolio.firstName}} {{myPortfolio.lastName}}</span>
-        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" [src]="myPortfolio.image" alt="..." /></span>
+        
+        <span class="d-block d-lg-none">{{user.firstName}} {{user.lastName}} ({{user.id}})</span>
+        <span class="d-none d-lg-block">
+            <img 
+                class="img-fluid img-profile rounded-circle mx-auto mb-2"
+                [src]="user.url_photo" 
+                [alt]="user.url_photo" /></span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre mi</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+            <!--
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+            -->
         </ul>
     </div>
   </nav>
