--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,52 @@
-<div *ng="user">
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <div class="container px-lg-5">
+        <img src="assets/img/logo_AP.png" class="logo" alt="Logo Argentina Programa #YoProgram">
+        <span class="text-light mr-auto">#YoProgramo</span>
+        <div class="ml-auto" id="navbarSupportedContent">
+            <div class="social-icons px-3 mx-3">
+                <a class="social-icon" [href]="user.url_linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a class="social-icon" [href]="user.url_github"><i class="fab fa-github"></i></a>
+                <a class="social-icon" [href]="user.url_facebook"><i class="fab fa-facebook-f"></i></a>
+                <app-login></app-login>
+            </div>
+            
+        </div>
+
+    </div>
+</nav>
+<!-- CAROUSEL-->
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="assets/img/banner_fullstack.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="text-dark">FULL STACK DEVELOPER</h2>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="assets/img/banner_robot.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="text-light">PROGRAMADOR DE ROBOTICA INDUSTRIAL</h2>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/banner_datascience.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="text-light">DATA SCIENTIST</h2>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
