--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <app-navigator></app-navigator>
 <!-- Page Content-->
 <div class="container-fluid p-0">
@@ -9,6 +9,8 @@
     <app-education></app-education>
     <hr class="m-0" />
     <app-skills></app-skills>
+    <hr class="m-0" />
+    <app-project></app-project>
     <hr class="m-0" />
     <!--
     <app-interests></app-interests>
