--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,19 +1,18 @@
-
-<!--
-<nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
-  
-</nav>
--->
-<div class="container">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <div class="d-flex">
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-info px-4" data-bs-toggle="modal" data-bs-target="#loginModal">
-        Iniciar Sesión
-      </button>
-    </div>
-  </div>
-</div>
+  <button *ngIf="!isLoggedIn"
+          type="button"
+          class="btn btn-info px-3 mx-3 btn-outline-primary border text-dark" 
+          data-bs-toggle="modal" 
+          data-bs-target="#loginModal"
+  >
+  Iniciar Sesión
+  </button>
+  <button *ngIf="isLoggedIn"
+          type="button"
+          class="btn btn-danger px-3 mx-3 btn-outline-primary border text-dark" 
+          (click)="logout()"
+  >
+  Cerrar Sesión
+  </button>
 <!-- Modal -->
 <div 
     class="modal fade"
@@ -30,59 +29,30 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="loginForm" (ngSubmit)="loginFormSubmit">
+        <form [formGroup]="form" (ngSubmit)="onSend($event)">
           <div class="mb-3">
-            <label for="id_email" class="form-label">Email</label>
-            <input formControlName="email" [class.is-invalid]="emailField.touched && emailField.invalid" type="email"
-              class="form-control" id="id_email">
-            <div *ngIf="emailField.touched && emailField.hasError('required')" class="d-block invalid-feedback">Ingrese email               provide a Email.</div>
-            <div *ngIf="emailField.touched && emailField.hasError('email')" class="d-block invalid-feedback">
-              El formato de email no es correcto</div>
+            <label for="id_username" class="form-label">Nombre de Usuario</label>
+            <input formControlName="username" [class.is-invalid]="usernameField.touched && usernameField.invalid" type="text"
+              class="form-control" id="id_username">
+            <div *ngIf="usernameField.touched && usernameField.hasError('required')" class="d-block invalid-feedback">Ingrese usuario.</div>
+            <div *ngIf="usernameField.touched && usernameField.hasError('username')" class="d-block invalid-feedback">
+              El formato de usuario no es correcto</div>
           </div>
           <div class="mb-3">
             <label for="id_Password" class="form-label">Contraseña</label>
             <input formControlName="password" [class.is-invalid]="passwordField.touched && passwordField.invalid"
-              type="password" class="form-control" id="id_Password">
+              type="password" class="form-control" id="id_password">
             <div *ngIf="passwordField.touched && passwordField.hasError('required')" class="d-block invalid-feedback">
               Ingrese la contraseña</div>
           </div>
-          <button [disabled]="loginForm.invalid" type="submit" class=" mt-3 btn btn-primary w-100">INGRESAR</button>
+          <button 
+                  [disabled]="form.invalid"
+                  type="submit" 
+                  class=" mt-3 btn btn-primary w-100"
+                  data-bs-dismiss="modal"
+                  >INGRESAR</button>
         </form>
       </div>
     </div>
   </div>
 </div>
-<!--<h1 class="m-5">Iniciar Sesión</h1>
-  <form [formGroup]="form" class="m-5" (ngSubmit)="onSend($event)">
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email</label>
-      <input type="email" formControlName="email" 
-      [ngClass]="{'is-invalid': Email?.errors && Email?.touched, 
-      'is-valid': !Email?.errors && Email?.touched }"
-      class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <div *ngIf="Email?.errors && Email?.touched">
-          <p *ngIf="Email?.hasError('required')" class="text-danger">
-              El email es requerido.
-          </p>
-          <p *ngIf="Email?.hasError('email')" class="text-danger">
-             El formato del email debe ser válido. 
-          </p>
-      </div>
-    </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" formControlName="password" 
-      [ngClass]="{'is-invalid': Password?.errors && Password?.touched, 
-      'is-valid': !Password?.errors && Password?.touched }"
-      class="form-control" id="exampleInputPassword1">
-      <div *ngIf="Password?.errors && Password?.touched">
-        <p *ngIf="Password?.hasError('required')" class="text-danger">
-            El password es requerido.
-        </p>
-        <p *ngIf="Password?.hasError('minlength')" class="text-danger">
-           La contraseña debe ser de 8 o más caracteres. 
-        </p>
-    </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Ingresar</button>
-  </form>-->
