--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -1,13 +1,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <app-login></app-login>
-    <h1 class="mb-0">
+    <h1 class="mb-0 mt-4">
         {{user.firstName}}
         <span class="text-light w">{{user.lastName}}</span>
     </h1>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        
-        <span class="d-block d-lg-none">{{user.firstName}} {{user.lastName}} ({{user.id}})</span>
         <span class="d-none d-lg-block">
             <img 
                 class="img-fluid img-profile rounded-circle mx-auto mb-2"
@@ -21,6 +18,7 @@
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project">Proyectos</a></li>
             <!--
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
