--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,8 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #cccccc;
+  background-image: linear-gradient(#0c6cfb, white);
 }
 
 hr {
@@ -11423,7 +11425,7 @@ section.resume-section .resume-section-content {
 
 @media (min-width: 768px) {
   section.resume-section {
-    min-height: 100vh;
+    min-height: 30vh;
   }
 }
 @media (min-width: 992px) {
